--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "grommet": "^2.17.1",
-    "grommet-controls": "^3.0.1",
     "grommet-icons": "^4.5.0",
     "react": "^17.0.2",
-    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toast-notifications": "^2.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.3",
